--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,16 @@
+
 {
     "version": 2,
-    "build":[
-        {
-            "src":"index.js",
-            "use": "@now/node"
-        }
+    "builds": [
+      {
+        "src": "src/index.js",
+        "use": "@vercel/node"
+      }
     ],
-    "routes":[
-        {
-            "src": "/(.*)",
-            "dest":"index.js"
-        }
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "src/index.js"
+      }
     ]
-}
+  }
