--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,16 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "src/index.js",
-        "use": "@vercel/node"
-      }
+    {
+    "src": "./index.js",
+    "use": "@vercel/node"
+    }
     ],
     "routes": [
-      {
+    {
         "src": "/(.*)",
-        "dest": "src/index.js"
-      }
+        "dest": "/",
+    "methods":["GET", "POST", "PATCH", "DELETE", "OPTIONS"]
+    }
     ]
-  }
+    }
